--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/frontend/node_modules
-/api-server/node_modules
+frontend/node_modules
+api-server/node_modules
 
 # testing
 /coverage
